# Khic

./: .gitignore  .project  Khic.cabal  README.md  testProgram.kc
Khic/: Khic.cabal
Khic/src/: Main.hs
src/: Ast.hs  BasicBlockAst.hs  BasicBlockTransformer.hs  Main.hs  Parser.hs
src/BackendLLVM/: Compile.hs  Emit.hs
src/Typing/: PhiAnalyzer.hs  TypeRetriever.hs  Typechecker.hs
