name:           Khic
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Evan

executable Khic
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   llvm-general,
                   llvm-general-pure,
                   parsec,
                   containers
  ghc-options:     -Wall
  other-modules:   
                   Parser,
                   Ast,
                   Typing.TypeRetriever,
                   Typing.Typechecker

